<resources>
    <string name="app_name">Image to PDF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Image To PDF</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adUnitID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="manifestAdId">ca-app-pub-3940256099942544~3347511713</string>

    <string name="menu_home">My Documents</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_pdf_creater">PdfCreater</string>
    <string name="view_pdf">view_pdf</string>
    <string name="filter_file_name">filter_file_name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="QRCode">QrCode</string>
    <string name="share_using">share_using</string>
    <string name="left">Left</string>
    <string name="rotate">Rotate</string>
    <string name="save_all">Save All</string>
    <string name="back">Back</string>
    <string name="button_text" />
    <string name="crop">Crop</string>
    <string name="ready_to_share">Ready to Share</string>
    <string name="done">Done</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="other">Other</string>
    <string name="message">To see all your documents in app. Please enable the <b>Access to all files</b> permission.</string>
    <string name="search">Search</string>
    <string name="please_wait_while_files_are_being_loaded">Please wait while files are being loaded...</string>
    <string name="sort_by">Sort By</string>
    <string name="right">Right</string>
</resources>