<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:background="@drawable/bg_round"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/_dialogIVQR"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        tools:src="@mipmap/ic_launcher" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/_dialogQrsave"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="5dp"
            android:text="@string/share"
            android:background="@drawable/finish"
            app:layout_constraintEnd_toStartOf="@id/qrcopy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/qrcopy"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="5dp"
            android:text="@string/copy"
            android:background="@drawable/finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/_dialogQrsave"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>