<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616">


    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropperView"
        android:layout_width="@dimen/_310sdp"
        android:layout_height="@dimen/_350sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cropBorderLineThickness="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        custom:cropInitialCropWindowPaddingRatio="0" />

    <TextView
        android:id="@+id/currentStateCount"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_round_black"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropperView" />

    <ImageView
        android:id="@+id/imageForward"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/circle"
        android:src="@drawable/arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentStateCount"
        app:layout_constraintTop_toBottomOf="@+id/cropperView"
        app:tint="@color/grey_40" />

    <ImageView
        android:id="@+id/imageBackward"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/circle"
        android:src="@drawable/arrow_left"
        app:layout_constraintEnd_toStartOf="@+id/currentStateCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropperView"
        app:tint="@color/grey_40" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rl2"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageLeft"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/rotateleft"
            android:backgroundTint="@color/grey_40" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/imageLeft"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rl1">

        <ImageView
            android:id="@+id/imageRight"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/rotateright"
            android:backgroundTint="@color/grey_40" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/imageRight"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/right"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rl2">

        <ImageView
            android:id="@+id/imageCrop"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/crop"
            android:backgroundTint="@color/grey_40" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/imageCrop"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/crop"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rl3">

        <ImageView
            android:id="@+id/imageDone"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/check"
            android:backgroundTint="@color/grey_40" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/imageDone"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>